--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,9 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <listener>
+  	<listener-class>controller.AppContextListener</listener-class>
+  </listener>
   <servlet>
   	<servlet-name>CadastrarUsuarioServelet</servlet-name>
   	<display-name>CadastrarUsuarioServelet</display-name>
@@ -16,6 +19,30 @@
   	<description></description>
   	<servlet-class>controller.LoginServlet</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>AppContextListener</servlet-name>
+  	<display-name>AppContextListener</display-name>
+  	<description></description>
+  	<servlet-class>controller.AppContextListener</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>ProcessaRelatorioServlet</servlet-name>
+  	<display-name>ProcessaRelatorioServlet</display-name>
+  	<description></description>
+  	<servlet-class>controller.ProcessaRelatorioServlet</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>InicialServlet</servlet-name>
+  	<display-name>InicialServlet</display-name>
+  	<description></description>
+  	<servlet-class>controller.InicialServlet</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>ListarMeusRelatorios</servlet-name>
+  	<display-name>ListarMeusRelatorios</display-name>
+  	<description></description>
+  	<servlet-class>controller.ListarMeusRelatorios</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>CadastrarUsuarioServelet</servlet-name>
   	<url-pattern>/CadastrarUsuarioServelet</url-pattern>
@@ -23,6 +50,22 @@
   <servlet-mapping>
   	<servlet-name>LoginServlet</servlet-name>
   	<url-pattern>/LoginServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>AppContextListener</servlet-name>
+  	<url-pattern>/AppContextListener</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>ProcessaRelatorioServlet</servlet-name>
+  	<url-pattern>/ProcessaRelatorioServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>InicialServlet</servlet-name>
+  	<url-pattern>/InicialServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>ListarMeusRelatorios</servlet-name>
+  	<url-pattern>/ListarMeusRelatorios</url-pattern>
   </servlet-mapping>
   
     <welcome-file-list>
